RESOLVED FIXED74290
[chromium] Window resize broken in threaded compositor
https://bugs.webkit.org/show_bug.cgi?id=74290
Summary [chromium] Window resize broken in threaded compositor
Iain Merrick
Reported 2011-12-12 05:27:15 PST
Easily reproducible in Chromium with --enable-threaded-compositing flag. Resize any window, and the contents don't refresh or resize.
Attachments
Adrienne Walker
Comment 1 2011-12-12 08:46:53 PST
James Robinson
Comment 2 2011-12-12 10:48:53 PST
It probably broke because we didn't have a test for it (cue Beyonce).
Nat Duca
Comment 3 2011-12-12 11:02:38 PST
Antoine, can you take a look?
Antoine Labour
Comment 4 2011-12-12 20:16:24 PST
Problem is in chrome land. http://codereview.chromium.org/8912002/ fixes it.
Note You need to log in before you can comment on or make changes to this bug.