Fix resize with --enable-threaded-compositing

BUG=https://bugs.webkit.org/show_bug.cgi?id=74290
TEST=chrome --enable-threaded-compositing


Review URL: http://codereview.chromium.org/8912002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@114260 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: b0dda9e2d11ba8a662d8671ede9d206b1a6b93ee